infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "MedicalProfileManagementVPCCE59815B": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MedicalProfileManagementVPC"
     }
    ]
   }
  },
  "MedicalProfileManagementVPCPublicSubnet1Subnet35BDF9E4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet1RouteTable15BFB198": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet1RouteTableAssociation79B68B62": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet1RouteTable15BFB198"
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet1Subnet35BDF9E4"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet1DefaultRoute8BD199A7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MedicalProfileManagementVPCIGW7D31C132"
    },
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet1RouteTable15BFB198"
    }
   },
   "DependsOn": [
    "MedicalProfileManagementVPCVPCGW5A85EAC9"
   ]
  },
  "MedicalProfileManagementVPCPublicSubnet1EIP3EF67266": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet1"
     }
    ]
   }
  },
  "MedicalProfileManagementVPCPublicSubnet1NATGateway035B6B9E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MedicalProfileManagementVPCPublicSubnet1EIP3EF67266",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet1Subnet35BDF9E4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MedicalProfileManagementVPCPublicSubnet1DefaultRoute8BD199A7",
    "MedicalProfileManagementVPCPublicSubnet1RouteTableAssociation79B68B62"
   ]
  },
  "MedicalProfileManagementVPCPublicSubnet2Subnet7F8EEA03": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet2RouteTable8B7BD85A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet2RouteTableAssociationDC43659C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet2RouteTable8B7BD85A"
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet2Subnet7F8EEA03"
    }
   }
  },
  "MedicalProfileManagementVPCPublicSubnet2DefaultRouteA55752B0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MedicalProfileManagementVPCIGW7D31C132"
    },
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet2RouteTable8B7BD85A"
    }
   },
   "DependsOn": [
    "MedicalProfileManagementVPCVPCGW5A85EAC9"
   ]
  },
  "MedicalProfileManagementVPCPublicSubnet2EIP56B0BA77": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet2"
     }
    ]
   }
  },
  "MedicalProfileManagementVPCPublicSubnet2NATGatewayCDAF25DE": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "MedicalProfileManagementVPCPublicSubnet2EIP56B0BA77",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet2Subnet7F8EEA03"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "MedicalProfileManagementVPCPublicSubnet2DefaultRouteA55752B0",
    "MedicalProfileManagementVPCPublicSubnet2RouteTableAssociationDC43659C"
   ]
  },
  "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet1RouteTable0F9CF6B2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet1RouteTableAssociation24FB7DD2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet1RouteTable0F9CF6B2"
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet1DefaultRouteB12542B0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet1NATGateway035B6B9E"
    },
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet1RouteTable0F9CF6B2"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet2RouteTable2B1100CA": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/MedicalProfileManagementVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet2RouteTableAssociationF93A5959": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet2RouteTable2B1100CA"
    },
    "SubnetId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
    }
   }
  },
  "MedicalProfileManagementVPCPrivateSubnet2DefaultRouteA58AA45B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MedicalProfileManagementVPCPublicSubnet2NATGatewayCDAF25DE"
    },
    "RouteTableId": {
     "Ref": "MedicalProfileManagementVPCPrivateSubnet2RouteTable2B1100CA"
    }
   }
  },
  "MedicalProfileManagementVPCIGW7D31C132": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MedicalProfileManagementVPC"
     }
    ]
   }
  },
  "MedicalProfileManagementVPCVPCGW5A85EAC9": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "MedicalProfileManagementVPCIGW7D31C132"
    },
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
     },
     {
      "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MedicalProfileServiceDBSubnetGroup4A08D3CC": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for MedicalProfileServiceDB database",
    "SubnetIds": [
     {
      "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
     },
     {
      "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
     }
    ]
   }
  },
  "MedicalProfileServiceDBSecurityGroup1A070601": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for MedicalProfileServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "localstackMedicalProfileServiceDBSecret869053EC3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MedicalProfileServiceDBSecretAttachment119BDE19": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackMedicalProfileServiceDBSecret869053EC3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "MedicalProfileServiceDB697A8323"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "MedicalProfileServiceDB697A8323": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "medical-profile-service-db",
    "DBSubnetGroupName": {
     "Ref": "MedicalProfileServiceDBSubnetGroup4A08D3CC"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackMedicalProfileServiceDBSecret869053EC3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "MedicalProfileServiceDBSecurityGroup1A070601",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MedicalProfileServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "MedicalProfileServiceDB697A8323",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "MedicalProfileServiceDB697A8323",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
      },
      {
       "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 2
   }
  },
  "MedicalProfileManagementCluster0CDAB59E": {
   "Type": "AWS::ECS::Cluster"
  },
  "MedicalProfileManagementClusterDefaultServiceDiscoveryNamespaceD9F996E0": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "medical-profile-management.local",
    "Vpc": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "AuthServiceTaskTaskRoleE466B974": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTask82E6680D": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "JWT_SECRET",
        "Value": "RL4rsSP95xTRF8lfY+fryPyZU5wxgQtCgHsKlfHdCWw="
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Port"
            ]
           },
           "/auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "AuthServiceDBSecretAttachmentF30406A9"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AuthServiceLogGroup34125B38"
        },
        "awslogs-stream-prefix": "auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 8085,
        "HostPort": 8085,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskExecutionRoleA1258495",
      "Arn"
     ]
    },
    "Family": "localstackAuthServiceTask4114E6CA",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskTaskRoleE466B974",
      "Arn"
     ]
    }
   }
  },
  "AuthServiceTaskExecutionRoleA1258495": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AuthServiceLogGroup34125B38",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AuthServiceTaskExecutionRoleDefaultPolicyF20AD0D3",
    "Roles": [
     {
      "Ref": "AuthServiceTaskExecutionRoleA1258495"
     }
    ]
   }
  },
  "AuthServiceLogGroup34125B38": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/auth-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthService3C2B741A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MedicalProfileManagementCluster0CDAB59E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AuthServiceSecurityGroup67F2FA7D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
       },
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
       }
      ]
     }
    },
    "ServiceName": "auth-service",
    "TaskDefinition": {
     "Ref": "AuthServiceTask82E6680D"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDBHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "AuthServiceSecurityGroup67F2FA7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   },
   "DependsOn": [
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceDBHealthCheck",
    "AuthServiceTaskTaskRoleE466B974"
   ]
  },
  "MedicalBillingServiceTaskTaskRoleCE25B907": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalBillingServiceTask1ED5D4FE": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "medical-billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "MedicalBillingServiceLogGroup05CFBF1F"
        },
        "awslogs-stream-prefix": "medical-billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "medical-billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 8082,
        "HostPort": 8082,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MedicalBillingServiceTaskExecutionRole8A10D002",
      "Arn"
     ]
    },
    "Family": "localstackMedicalBillingServiceTaskD2780D53",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MedicalBillingServiceTaskTaskRoleCE25B907",
      "Arn"
     ]
    }
   }
  },
  "MedicalBillingServiceTaskExecutionRole8A10D002": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalBillingServiceTaskExecutionRoleDefaultPolicy20E51C86": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MedicalBillingServiceLogGroup05CFBF1F",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MedicalBillingServiceTaskExecutionRoleDefaultPolicy20E51C86",
    "Roles": [
     {
      "Ref": "MedicalBillingServiceTaskExecutionRole8A10D002"
     }
    ]
   }
  },
  "MedicalBillingServiceLogGroup05CFBF1F": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/medical-billing-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MedicalBillingService700637CD": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MedicalProfileManagementCluster0CDAB59E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MedicalBillingServiceSecurityGroup02D457C2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
       },
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
       }
      ]
     }
    },
    "ServiceName": "medical-billing-service",
    "TaskDefinition": {
     "Ref": "MedicalBillingServiceTask1ED5D4FE"
    }
   },
   "DependsOn": [
    "MedicalBillingServiceTaskTaskRoleCE25B907"
   ]
  },
  "MedicalBillingServiceSecurityGroup02D457C2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/MedicalBillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   },
   "DependsOn": [
    "MedicalBillingServiceTaskTaskRoleCE25B907"
   ]
  },
  "MedicalAnalyticsServiceTaskTaskRole2483602C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalAnalyticsServiceTask1B331E1E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "medical-analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "MedicalAnalyticsServiceLogGroup0A287A59"
        },
        "awslogs-stream-prefix": "medical-analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "medical-analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 8083,
        "HostPort": 8083,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MedicalAnalyticsServiceTaskExecutionRole26FF365A",
      "Arn"
     ]
    },
    "Family": "localstackMedicalAnalyticsServiceTaskCA546E78",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MedicalAnalyticsServiceTaskTaskRole2483602C",
      "Arn"
     ]
    }
   }
  },
  "MedicalAnalyticsServiceTaskExecutionRole26FF365A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalAnalyticsServiceTaskExecutionRoleDefaultPolicyBDAFEF5F": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MedicalAnalyticsServiceLogGroup0A287A59",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MedicalAnalyticsServiceTaskExecutionRoleDefaultPolicyBDAFEF5F",
    "Roles": [
     {
      "Ref": "MedicalAnalyticsServiceTaskExecutionRole26FF365A"
     }
    ]
   }
  },
  "MedicalAnalyticsServiceLogGroup0A287A59": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/medical-analytics-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MedicalAnalyticsService9F87032A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MedicalProfileManagementCluster0CDAB59E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MedicalAnalyticsServiceSecurityGroup210A536B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
       },
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
       }
      ]
     }
    },
    "ServiceName": "medical-analytics-service",
    "TaskDefinition": {
     "Ref": "MedicalAnalyticsServiceTask1B331E1E"
    }
   },
   "DependsOn": [
    "MedicalAnalyticsServiceTaskTaskRole2483602C",
    "MskCluster"
   ]
  },
  "MedicalAnalyticsServiceSecurityGroup210A536B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/MedicalAnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   },
   "DependsOn": [
    "MedicalAnalyticsServiceTaskTaskRole2483602C",
    "MskCluster"
   ]
  },
  "MedicalProfileServiceTaskTaskRole6C689BAD": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalProfileServiceTask536D6D82": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BILLING_SERVICE_GRPC_PORT",
        "Value": "9001"
       },
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "MedicalProfileServiceDB697A8323",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "MedicalProfileServiceDB697A8323",
             "Endpoint.Port"
            ]
           },
           "/medical-profile-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "MedicalProfileServiceDBSecretAttachment119BDE19"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       }
      ],
      "Essential": true,
      "Image": "medical-profile-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "MedicalProfileServiceLogGroupD0E9BFFC"
        },
        "awslogs-stream-prefix": "medical-profile-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "medical-profile-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 8081,
        "HostPort": 8081,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "MedicalProfileServiceTaskExecutionRole749B562E",
      "Arn"
     ]
    },
    "Family": "localstackMedicalProfileServiceTask50565D2D",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "MedicalProfileServiceTaskTaskRole6C689BAD",
      "Arn"
     ]
    }
   }
  },
  "MedicalProfileServiceTaskExecutionRole749B562E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "MedicalProfileServiceTaskExecutionRoleDefaultPolicy8A698E50": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "MedicalProfileServiceLogGroupD0E9BFFC",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "MedicalProfileServiceTaskExecutionRoleDefaultPolicy8A698E50",
    "Roles": [
     {
      "Ref": "MedicalProfileServiceTaskExecutionRole749B562E"
     }
    ]
   }
  },
  "MedicalProfileServiceLogGroupD0E9BFFC": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/medical-profile-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "MedicalProfileService6197016F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MedicalProfileManagementCluster0CDAB59E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "MedicalProfileServiceSecurityGroup21506C54",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
       },
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
       }
      ]
     }
    },
    "ServiceName": "medical-profile-service",
    "TaskDefinition": {
     "Ref": "MedicalProfileServiceTask536D6D82"
    }
   },
   "DependsOn": [
    "MedicalBillingServiceSecurityGroup02D457C2",
    "MedicalBillingService700637CD",
    "MedicalProfileServiceDB697A8323",
    "MedicalProfileServiceDBSecretAttachment119BDE19",
    "localstackMedicalProfileServiceDBSecret869053EC3fdaad7efa858a3daf9490cf0a702aeb",
    "MedicalProfileServiceDBSecurityGroup1A070601",
    "MedicalProfileServiceDBSubnetGroup4A08D3CC",
    "MedicalProfileServiceDBHealthCheck",
    "MedicalProfileServiceTaskTaskRole6C689BAD",
    "MskCluster"
   ]
  },
  "MedicalProfileServiceSecurityGroup21506C54": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/MedicalProfileService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   },
   "DependsOn": [
    "MedicalBillingServiceSecurityGroup02D457C2",
    "MedicalBillingService700637CD",
    "MedicalProfileServiceDB697A8323",
    "MedicalProfileServiceDBSecretAttachment119BDE19",
    "localstackMedicalProfileServiceDBSecret869053EC3fdaad7efa858a3daf9490cf0a702aeb",
    "MedicalProfileServiceDBSecurityGroup1A070601",
    "MedicalProfileServiceDBSubnetGroup4A08D3CC",
    "MedicalProfileServiceDBHealthCheck",
    "MedicalProfileServiceTaskTaskRole6C689BAD",
    "MskCluster"
   ]
  },
  "APIGatewayTaskDefinitionTaskRole894A199F": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDefinition199BB1B7": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:8085"
       },
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ApiGatewayLogGroupA9770429"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "APIGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 8084,
        "HostPort": 8084,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefinitionExecutionRole555CBA21",
      "Arn"
     ]
    },
    "Family": "localstackAPIGatewayTaskDefinitionF109B4B7",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefinitionTaskRole894A199F",
      "Arn"
     ]
    }
   }
  },
  "APIGatewayTaskDefinitionExecutionRole555CBA21": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ApiGatewayLogGroupA9770429",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "APIGatewayTaskDefinitionExecutionRoleDefaultPolicy582C1C35",
    "Roles": [
     {
      "Ref": "APIGatewayTaskDefinitionExecutionRole555CBA21"
     }
    ]
   }
  },
  "ApiGatewayLogGroupA9770429": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "APIGatewayServiceLBDA2B7609": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "APIGatewayServiceLBSecurityGroup8524BFD1",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "MedicalProfileManagementVPCPublicSubnet1Subnet35BDF9E4"
     },
     {
      "Ref": "MedicalProfileManagementVPCPublicSubnet2Subnet7F8EEA03"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "MedicalProfileManagementVPCPublicSubnet1DefaultRoute8BD199A7",
    "MedicalProfileManagementVPCPublicSubnet1RouteTableAssociation79B68B62",
    "MedicalProfileManagementVPCPublicSubnet2DefaultRouteA55752B0",
    "MedicalProfileManagementVPCPublicSubnet2RouteTableAssociationDC43659C"
   ]
  },
  "APIGatewayServiceLBSecurityGroup8524BFD1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB localstackAPIGatewayServiceLB0192615A",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "APIGatewayServiceLBSecurityGrouptolocalstackAPIGatewayServiceSecurityGroup37054EEE8084490D02C5": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "FromPort": 8084,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8084
   }
  },
  "APIGatewayServiceLBPublicListenerD6FA7F47": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "APIGatewayServiceLBDA2B7609"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   }
  },
  "APIGatewayServiceA5206149": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MedicalProfileManagementCluster0CDAB59E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "APIGatewayContainer",
      "ContainerPort": 8084,
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "APIGatewayServiceSecurityGroup98F3B93B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet1SubnetEE26746A"
       },
       {
        "Ref": "MedicalProfileManagementVPCPrivateSubnet2Subnet064FF6E5"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "APIGatewayTaskDefinition199BB1B7"
    }
   },
   "DependsOn": [
    "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70",
    "APIGatewayServiceLBPublicListenerD6FA7F47",
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  },
  "APIGatewayServiceSecurityGroup98F3B93B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/APIGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MedicalProfileManagementVPCCE59815B"
    }
   },
   "DependsOn": [
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  },
  "APIGatewayServiceSecurityGroupfromlocalstackAPIGatewayServiceLBSecurityGroup32B4CA428084BE140A38": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8084,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "ToPort": 8084
   },
   "DependsOn": [
    "APIGatewayTaskDefinitionTaskRole894A199F"
   ]
  }
 },
 "Outputs": {
  "APIGatewayServiceLoadBalancerDNS7C7318A3": {
   "Value": {
    "Fn::GetAtt": [
     "APIGatewayServiceLBDA2B7609",
     "DNSName"
    ]
   }
  },
  "APIGatewayServiceServiceURL95056890": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "APIGatewayServiceLBDA2B7609",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
